--- a/style.css
+++ b/style.css
@@ -168,3 +168,25 @@ header nav{
     visibility: hidden;
     display: none;
 }
+@media (max-width:1200px){
+    .imagenes{
+        columns: 3 200px;
+        margin-left: 2%;
+        margin-right: 2%;        
+    }
+    .card-image img{
+        border-radius: 15px;
+        min-width: 180px;
+        max-width: 200px;
+    }
+}
+@media (max-width:450px){
+    .imagenes{
+        columns: 2 180px;
+    }
+    .card-image img{
+        border-radius: 15px;
+        min-width: 100px;
+        max-width: 180px;
+    }
+}
